@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.61 2006/07/28 07:15:15 manu Exp $
+# $Id: Makefile,v 1.62 2006/07/28 15:41:51 manu Exp $
 
 #
 # Copyright (c) 2004 Emmanuel Dreyfus
@@ -29,7 +29,7 @@
 # OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-CFLAGS= 	-g -O2 -Wall -D_BSD_SOURCE
+CFLAGS= 	-g -O2 -Wall -DUSE_DNSRBL -D_BSD_SOURCE
 LDFLAGS=	
 LIBS= 		 -lresolv -lpthread -lmilter
 prefix=		/usr/local
